@@ -103,6 +103,11 @@ Set the timestamp fuzz factor for identifying patch sets in seconds.
 The default is 300 seconds. This option is irrelevant for changesets
 with commitids.
 
+-c::
+Don't trust commit-IDs; match by ordinary metatada.  Will be useful if
+you have something like a CVS-NT repository in which per-file commits
+were made in such a way that the cliques don't have matching IDs.
+
 -k::
 Specify RCS/CVS keyword expansion.  You can specify any of the CVS
 keyword expansion types: "kv" (keyword-value), "kvl"
